fixed map size on small screen

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -148,7 +148,7 @@ body { background: #fafafa;}
 		}
 	}
 	#list {
-		position: absolute;
+		
 		overflow: auto;
 		@include column(4);
 		@include pull(8);
@@ -188,6 +188,7 @@ body { background: #fafafa;}
 	#map {
 		@include respondTo(smallScreen) {
 			height: 140px;
+			width: 100% !important;
 			.leaflet-control-zoom {
 				display: none;
 			}
